Bot names, clean up and styling

--- a/analysis_ellibot.html
+++ b/analysis_ellibot.html
@@ -12,7 +12,7 @@
 <body>
     <header class="card py-2 cardColor">
         <div class=" my-1 mx-2">
-            <img src="qs-logo-header.png" class="img-size">
+            <img src="imgs/qs-logo-header.png" class="img-size">
             <button class="settingsButton"><i class='fas fa-cog' style='font-size:36px'></i></i></button>
         </div>
     </header>
@@ -52,11 +52,11 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_pistachiobot.html')">Pistachio Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Study Guide Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Destination Guide Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">QS Ranking Support Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_pistachiobot.html')">Pistachio_University Search</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli_QS Apply</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Pistachio_Study Guide</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Pistachio_Destination Guide</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">Robert_QS Support and Ranking</button></li>
                         </ul>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 <header class="container-fluid p-3 border-bottom">
                     <div class="row">
                         <div class="col-6">
-                            <h4>Analytics: Elli Bot</h4>
+                            <h4>Analytics: Elli_QS Apply</h4>
                         </div>
                         <div class="col-6 text-end">
                             <div class="row">
