--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class=" my-1 mx-2">
             <div class="row" style="--bs-gutter-x: 0;">
                 <div class="col-6">
-                    <img src="qs-logo-header.png" class="img-size">
+                    <img src="imgs/qs-logo-header.png" class="img-size">
                 </div>
                 <div class="col-6 align-content-center">
                     <button class="settingsButton "><i class='fas fa-cog' style='font-size:36px'></i></i></button>
@@ -58,11 +58,11 @@
                             </div>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_pistachiobot.html')">Pistachio Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Study Guide Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Destination Guide Bot</button></li>
-                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">QS Ranking Support Bot</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_pistachiobot.html')">Pistachio_University Search</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_ellibot.html')">Elli_QS Apply</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_studyguidebot.html')">Pistachio_Study Guide</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_destinationguidebot.html')">Pistachio_Destination Guide</button></li>
+                            <li><button class="dropdown-item btnn" onclick="navigateTo('analysis_rankingsupportbot.html')">Robert_QS Support and Ranking</button></li>
                         </ul>
                     </div>
                 </div>
@@ -165,10 +165,10 @@
                                             <div class="col-6 d-flex align-items-stretch justify-content-center">
                                                 <div class="row">
                                                     <div class="col-3 align-content-center">
-                                                        <img src="Elli-bot-pic.png" class="img-bot">
+                                                        <img src="imgs/Elli-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/b73aeb28-640f-48a6-9b1f-46d84fc02e70/overview">ELLI BOT</a></h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/b73aeb28-640f-48a6-9b1f-46d84fc02e70/overview">Elli_QS Apply</a></h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -195,10 +195,10 @@
                                             <div class="col-6 d-flex align-items-stretch justify-content-center">
                                                 <div class="row">
                                                     <div class="col-3 align-content-center">
-                                                        <img src="Lead-gen-bot-pic.png" class="img-bot">
+                                                        <img src="imgs/Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">PISTACHIO BOT</a><h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Pistachio_University Search</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -225,10 +225,10 @@
                                             <div class="col-6 d-flex align-items-stretch justify-content-center">
                                                 <div class="row">
                                                     <div class="col-3 align-content-center">
-                                                        <img src="Lead-gen-bot-pic.png" class="img-bot">
+                                                        <img src="imgs/Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">STUDY GUIDE</a><h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Pistachio_Study Guide</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -255,10 +255,10 @@
                                             <div class="col-6 d-flex align-items-stretch justify-content-center">
                                                 <div class="row">
                                                     <div class="col-3 align-content-center">
-                                                        <img src="Lead-gen-bot-pic.png" class="img-bot">
+                                                        <img src="imgs/Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Destination GUIDE</a><h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/a4acca45-aa89-4340-996f-e12b79cb2ab9/overview">Pistachio_Destination Guide</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -285,10 +285,10 @@
                                             <div class="col-6 d-flex align-items-stretch justify-content-center">
                                                 <div class="row">
                                                     <div class="col-3 align-content-center">
-                                                        <img src="Lead-gen-bot-pic.png" class="img-bot">
+                                                        <img src="imgs/Lead-gen-bot-pic.png" class="img-bot">
                                                     </div>
                                                     <div class="col-9 align-content-center">
-                                                        <h2><a class="no-link" href="">QS Ranking Support Bot</a><h2>
+                                                        <h2><a class="no-link" href="https://app.botpress.cloud/workspaces/wkspace_01HMAJW0RD0NBS3N9MEDM111JF/bots/e036b5c1-6c4b-474f-80ec-985795748f01/overview">Robert_QS Support and Ranking</a><h2>
                                                     </div>
                                                 </div>
                                             </div>
