--- a/analysis_ellibot.html
+++ b/analysis_ellibot.html
@@ -96,21 +96,21 @@
                 <header class="container-fluid p-2 mb-3 bg-light border-bottom">
                     <div class="row">
                         <div class="col-12 d-flex justify-content-start">
-                            <button class="btn btn-dark mx-2" id="study-matrix-tab">Sort by date</button>
+                            <label for="monthSelector">Choose Month:</label>
                             <select class="form-select mx-2" style="width: auto;" id="monthSelector">
                                 <option selected>Choose a month</option>
-                                <option value="January">January</option>
-                                <option value="February">February</option>
-                                <option value="March">March</option>
-                                <option value="April">April</option>
-                                <option value="May">May</option>
-                                <option value="June">June</option>
-                                <option value="July">July</option>
-                                <option value="August">August</option>
-                                <option value="September">September</option>
-                                <option value="October">October</option>
-                                <option value="November">November</option>
-                                <option value="December">December</option>
+                                <option value="January 2024 Elli">January</option>
+                                <option value="February 2024 Elli">February</option>
+                                <option value="March 2024 Elli">March</option>
+                                <option value="April 2024 Elli">April</option>
+                                <option value="May 2024 Elli">May</option>
+                                <option value="June 2024 Elli">June</option>
+                                <option value="July 2024 Elli">July</option>
+                                <option value="August 2024 Elli">August</option>
+                                <option value="September 2024 Elli">September</option>
+                                <option value="October 2024 Elli">October</option>
+                                <option value="November 2024 Elli">November</option>
+                                <option value="December 2024 Elli">December</option>
                             </select>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                                 <h2>Total New Users</h2>
                                 <div class = "circle">
                                     <div class="total-users-circle">
-                                        <span id="totalUsers">0</span>
+                                        <span id="totalUser">0</span>
                                     </div>
                                 </div>
                                 <h2>New Users by Month</h2>
@@ -176,7 +176,8 @@
     </script>
     <script src="bot_navigation.js"></script>
     <script src="bot_status.js"></script>
-    <script src="display_elli.js"></script>
+    <!-- <script src="display_elli.js"></script> -->
+    <script src="display_data.js"></script>
     <!-- <script src="https://mediafiles.botpress.cloud/3865d6df-cf99-43a6-ad8c-ba37c8f36695/webchat/config.js" defer></script> -->
     <script src="https://kit.fontawesome.com/031ad05086.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
